# Codeforce1

./: CMakeLists.txt  README.md
include/: CMakeCache.txt  Makefile  Multiples  area  cmake_install.cmake  diff  hello  min_max  sum1_n  sumdigit
src/: Area_of_circle.cpp  Differance.cpp  Floor_ceil_round.cpp  Hello.cpp  Multiples.cpp  Small_clculator.cpp  Summation_1toN.cpp  Summation_of_digits.cpp  min_max.cpp  yes_or_no.cpp
