cmake_minimum_required(VERSION 3.5)

project(codeforce)

set(CMAKE_CXX_STANDARD 11)

add_executable(area src/Area_of_circle.cpp)
add_executable(diff src/Differance.cpp)
add_executable(fcr src/Floor_ceil_round.cpp)
add_executable(hello src/Hello.cpp)
add_executable(calcuator src/Small_clculator.cpp)
add_executable(sum1_n src/Summation_1toN.cpp)
add_executable(sumdigit src/Summation_of_digits.cpp)
add_executable(YESorNO src/yes_or_no.cpp)
add_executable(Multiples src/Multiples.cpp)
add_executable(min_max src/min_max.cpp)
